argocd/manifests/prod/apps/stirling/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling
  namespace: stirling
  labels:
    app.kubernetes.io/name: stirling
spec:
  selector:
    app: stirling
  ports:
  - name: http
    port: 80 # we talk to 80
    protocol: TCP
    targetPort: 8080 # app listens here
