argocd/manifests/prod/apps/stirling/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # TODO: Use Traefik
    # nginx.ingress.kubernetes.io/proxy-body-size: 100m
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: "900"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    # nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "900"
    
spec:
  ingressClassName: nginx
  rules:
  - host: stirling.pengiuns.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stirling
            port:
              number: 80
  tls:
  - hosts:
      - stirling.pengiuns.com
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
